--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-cropper": "^0.6.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
