--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "vue-project",
+  "name": "image2model",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.4.29",
-    "vue-cropper": "^0.6.5"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.1"
+    "@eslint/js": "^9.12.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "eslint": "^9.12.0",
+    "eslint-plugin-vue": "^9.29.0",
+    "vite": "^5.4.8"
   }
 }
